--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
       <a
         aria-label="My Instagram"
         target="_blank"
-        href="https://www.instagram.com/aynat_cm"
+        href="https://www.instagram.com/aynatcm/"
         ><i class="icon fa fa-instagram" aria-hidden="true"></i
       ></a>
       <a
@@ -23,7 +23,7 @@
       <a
         aria-label="My Github"
         target="_blank"
-        href="https://github.com/AynatCortez"
+        href="https://github.com/aynatcm"
         ><i class="icon fa fa-github-alt" aria-hidden="true"></i
       ></a>
     </div>
