finals updates on aboutme

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -24,8 +24,7 @@
       ></path>
     </svg>
     <p>
-      Me siento comodo trabajando con css puro, asi mismo puedo pasar de css a
-      SASS sin problemas.
+      Me siento comodo trabajando con css puro.
     </p>
   </div>
   <div class="tech">
